# a2a-agent-registry

./: .gitignore  Dockerfile  README.md  deploy_cloud_run.sh  deploy_remote_agent.py  deploy_remote_agent.sh  deployment_metadata.json  get_agent_card.py  pyproject.toml
app/: __init__.py  agent.py  consumer_agent.py  web_app.py
app/app_utils/: telemetry.py  typing.py
app/static/: index.css  index.html  index.js
deploy/: Dockerfile  cloudbuild.yaml  deploy_cloud_run.sh  deploy_remote_agent.py  deploy_remote_agent.sh  deployment_metadata.json
remote_agent/: __init__.py  agent.py  agent_runtime_app.py  requirements.txt
remote_agent/utils/: telemetry.py
scratch/: test_mode_patch.py
